updated the gap issue with the header

--- a/css-styles/styles.css
+++ b/css-styles/styles.css
@@ -7,7 +7,7 @@ html {
 }
 
 h1 {
-    margin: 0;
+    margin: 20px 0;
     color: blueviolet;
     padding: 0 20px;
     text-shadow: 3px 3px 1px black;
